src/main/resources/grammar.txt
expr            -> equality ;
equality        -> comparison (("!=" | "==") comparison)* ;
comparison      -> term ((">" | ">=" | "<" | "<=") term)* ;
term            -> factory (("+"| "-") factor)* ;
factor          -> unary (("/"| "*") unary)* ;
unary           -> ("!"| "-") unary | primary ;
primary         -> NUMBER | STRING | "vrai" | "faux" | "nil" | "(" expr ")" | IDENTIFIER ;
